# delete-branches

./: CHANGELOG.md  CONTRIBUTING.md  README.md  action.yaml  pyproject.toml  setup.cfg
.github/workflows/: cd-production.yaml  cd-staging.yaml  ci.yaml  cron-tasks.yaml  reusable-dependency-review.yaml  reusable-pre-commit.yaml
badges/: coverage.json  marketplace.json
src/delete_branches/: run.py
tests/: test_run.py
